fix: Explicitly link CI/CD job to 'deployment' environment for secret access

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
     name: Build, Push, and Deploy
     runs-on: ubuntu-latest
 
+    environment: deployment
+
     permissions:
       contents: 'read'
       id-token: 'write' # Required for advanced authentication methods, good practice
